# RobotechVirtualChallenge

./: .gitignore  .gitmodules  README.md
navigation/: CMakeLists.txt  package.xml
navigation/launch/: navigation.launch  purple_tb3_navigation.launch  red_tb3_navigation.launch  slam_mapping.launch  teleop.launch
navigation/launch/includes/: amcl.launch  move_base.launch
navigation/maps/: map.pgm  map.yaml
navigation/param/: base_local_planner_params.yaml  dwa_local_planner_params_waffle.yaml
navigation/rviz/: navigation.rviz
navigation/src/: navigate_to_wp.cpp
robotech_referee/: CMakeLists.txt  package.xml
robotech_referee/robotech_referee/: CMakeLists.txt  package.xml
robotech_referee/robotech_referee/launch/: challenge_starter.launch  reactor_leak.launch
robotech_referee/robotech_referee/src/: challenge_starter.cpp  images_converter.py  speed_checker.cpp  task_starter.cpp
robotech_referee/robotech_referee_msgs/: CMakeLists.txt  package.xml
robotech_referee/robotech_referee_msgs/msg/: MatchInfo.msg  MatchInit.msg
robotech_referee/src/: images_converter.py
robots/definition/sim/: hokuyo.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro
robots/definition/sim/urdf/: camera.gazebo.xacro  camera.urdf.xacro  common_properties.xacro  turtlebot3_purple_waffle.gazebo.xacro  turtlebot3_purple_waffle.urdf.xacro  turtlebot3_red_waffle.gazebo.xacro  turtlebot3_red_waffle.urdf.xacro
robots/launch/: sim.launch  sim_gui.launch  sim_gui_tb3.launch  spawn.launch  turtlebot3_remote.launch
robots/launch/includes/: robot.launch.xml
robots/maps/: map.yaml
robots/worlds/: among_us.world  maze.world  robotech_virtual_challenge.world  robotech_virtual_challenge_2.world  robotech_virtual_challenge_old.world  sumo.world
robots/worlds/models/among_us_world/: model.config  model.sdf
robots/worlds/models/bed/: model.sdf
robots/worlds/models/orange_cylinder/: model.config  model.sdf
robots/worlds/models/ramp/: model.sdf
web_interface/example/: combat_viwer.html  example.html
web_interface/example/css/: index.css
web_interface/www/: combat_viwer.html
web_interface/www/css/: index.css
(+7 files in other folders)
